--- a/monolith/apps/licence-exam-sveltekit/tsconfig.json
+++ b/monolith/apps/licence-exam-sveltekit/tsconfig.json
@@ -8,8 +8,12 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"outDir": "build",
+		"ignoreDeprecations": "5.0"
+	},
+	"include": [".eslintrc.cjs"],
+	"files": ["svelte.config.js", "vite.config.ts"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
