--- a/monolith/packages/db/package.json
+++ b/monolith/packages/db/package.json
@@ -2,7 +2,7 @@
   "name": "db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.14.1",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
